components/operators/openshift-ai/instance-3.x/components/gateway-maas/gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: maas-gateway-route
  namespace: openshift-ingress
spec:
  # Replace with your actual hostname.
  # host: maas.apps.<cluster-url>
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: maas-default-gateway-data-science-gateway-class
    weight: 100
